# PRM_Streamlit

./: ._.gitignore  ._0_BASE_Model_Construction.py  ._0_PRM_App_Memo.docx  ._Example_Dataset  ._LICENSE  ._Library_model_construction.py  ._List  ._PRM_App_Main.py  ._PRM_Explain_Library.py  ._PRM_Predict_liblary.py  ._PRM_liblary.py  ._README.md  ._pyproject.toml  ._requirements.txt  .gitignore  0_BASE_Model_Construction.py  0_PRM_App_Memo.docx  Library_model_construction.py  Library_preprocessing.py  PRM_App_Library.py  PRM_App_Main.py  PRM_Explain_Library.py  PRM_Predict_liblary.py  PRM_liblary.py  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: ._0_BASE_Model_Construction-checkpoint.py  0_BASE_Model_Construction-checkpoint.py  0_BASE_Model_Construction_-checkpoint.py  Library_model_construction-checkpoint.py  Library_preprocessing-checkpoint.py  PRM_Explain_Library-checkpoint.py  PRM_Predict_liblary-checkpoint.py
0_NoteBook/: 0_Protoltithデータ：間違いの修正_240510.ipynb  3_Each_model_explain_ver241211.ipynb  4_Kelley_data_display_ver250114.ipynb  5_SHAP_Explaination_250602.ipynb  5_SHAP_Explaination_250604.ipynb  Compile_score_ver250303.ipynb  Protolith_Composition_Visualization.ipynb
Example_Dataset/: ._Example_dataset(Kelley_2003_Seafloor_altered_basalt).csv  ._Kelley_2003_compile.xlsx  Example_dataset(Kelley_2003_Seafloor_altered_basalt).csv  Kelley_2003_compile.xlsx
List/: ._BasicComponent_Compiled.xlsx  ._Element_weight.xlsx  ._I_value_sheet.xlsx  ._MORB_OIB_DMM_raw.xlsx  ._MORB_OIB_Normalized.xlsx  ._Normalize_values.xlsx  ._compatibility_list.xlsx  (+13 more)
(+2409 files in other folders)
