[project]
name = "prm-application-main"
version = "0.1.0"
description = ""
authors = [
    {name = "Satoshi Matsuno",email = "51268793+MSrakugo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">3.10,<3.13"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "jupyterlab (>=4.4.3,<5.0.0)",
    "numpy (==1.26)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (==5.5.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "shap (>=0.47.2,<0.48.0)",
    "altair (>=5.5.0,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ngboost (>=0.5.6,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
